<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nikylos.gofit.MainActivity"
    android:weightSum="1">


    <TextView
        android:text="@string/daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
       >

        <TextView
            android:text="@string/calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_centerHorizontal="true"
            android:onClick="goCalculator"
            android:id="@+id/textView" />

        <TextView
            android:text="@string/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:onClick="goSetting"
            android:id="@+id/textView1" />

    </LinearLayout>


</RelativeLayout>
